feat: imagenes de habitaciones con principal, almacenamiento y endpoints
